# zerodha_history

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  zerodha_history.py
