[project]
name = "zerodha-history"
version = "1.0.0"
description = "Generate comprehensive trading history reports for your Zerodha account"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["zerodha", "trading", "portfolio", "analysis", "stocks", "india"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28.0",
    "playwright>=1.40.0",
]

[project.scripts]
zerodha-history = "zerodha_history:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
